--- a/iOS/AgoraEntScenarios/Scenes/Joy/Joy/Resources/Joy.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Joy/Joy/Resources/Joy.bundle/zh-Hans.lproj/Localizable.strings
@@ -53,6 +53,7 @@
 "query_subtitle_timeout"="重新体验请返回创建房间";
 "query_title_timeout_guest"="玩法超时自动退出";
 "query_subtitle_timeout_guest"="重新体验请返回进入房间";
+"query_title_destroy"="主播端异常";
 
 "show_create_room_name1"="小可爱是我呀";
 "show_create_room_name2"="我是你的小可爱";
