--- a/Android/scenes/joy/src/main/res/values/strings.xml
+++ b/Android/scenes/joy/src/main/res/values/strings.xml
@@ -17,10 +17,14 @@
     <string name="joy_gift">礼物</string>
     <string name="joy_send_message">发送弹幕</string>
     <string name="joy_send">发送</string>
-    <string name="joy_living_end_title">结束游戏</string>
-    <string name="joy_living_end_content">是否退出游戏直播？</string>
+    <string name="joy_living_host_end_title">结束游戏</string>
+    <string name="joy_living_user_end_title">结束玩法</string>
+    <string name="joy_living_host_end_content">是否退出游戏直播？</string>
+    <string name="joy_living_user_end_content">是否退出直播？</string>
     <string name="joy_living_timeout_title">游戏超时自动退出</string>
-    <string name="joy_living_timeout_content">重新体验游戏请返回创建房间</string>
+    <string name="joy_living_host_timeout">重新体验游戏请返回创建房间</string>
+    <string name="joy_living_abnormal_title">主播端异常</string>
+    <string name="joy_living_user_timeout">重新体验游戏请返回进入房间</string>
     <string name="joy_send_message_success">指令发送成功</string>
     <string name="joy_join_the_camp_first">请先加入阵营</string>
     <string name="joy_send_gift_success">发送礼物成功</string>
