--- a/iOS/AgoraEntScenarios/Scenes/Joy/Joy/Resources/Joy.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Joy/Joy/Resources/Joy.bundle/en.lproj/Localizable.strings
@@ -53,14 +53,24 @@
 "query_title_timeout_guest"="玩法超时自动退出";
 "query_subtitle_timeout_guest"="重新体验请返回进入房间";
 
-
-"show_create_room_name1"="小可爱是我呀";
-"show_create_room_name2"="我是你的小可爱";
-"show_create_room_name3"="一往情深";
-"show_create_room_name4"="情不知所起";
-"show_create_room_name5"="沪上挖掘机";
-"show_create_room_name6"="张江推土机";
-"show_create_room_name7"="川沙妲己痴迷粉丝";
-"show_create_room_name8"="疯狂星期几";
-"show_create_room_name9"="小黄鸭";
-"show_create_room_name10"="西二旗老板娘";
+"show_create_room_name1"="和你一起看月亮";
+"show_create_room_name2"="治愈";
+"show_create_room_name3"="一锤定音";
+"show_create_room_name4"="有酒吗";
+"show_create_room_name5"="早安序曲";
+"show_create_room_name6"="风情万种的歌房";
+"show_create_room_name7"="近在远方";
+"show_create_room_name8"="风中诗";
+"show_create_room_name9"="那年风月";
+"show_create_room_name10"="三万余年";
+"show_create_room_name11"="七十二街";
+"show_create_room_name12"="情怀如诗";
+"show_create_room_name13"="简遇而安";
+"show_create_room_name14"="十里笙歌";
+"show_create_room_name15"="回风舞雪";
+"show_create_room_name16"="梦初醒处";
+"show_create_room_name17"="别来无恙";
+"show_create_room_name18"="三里清风";
+"show_create_room_name19"="烟雨万重";
+"show_create_room_name20"="水洗晴空";
+"show_create_room_name21"="轻风淡月";
