--- a/Android/scenes/ktv/src/main/res/values/strings.xml
+++ b/Android/scenes/ktv/src/main/res/values/strings.xml
@@ -152,7 +152,7 @@
     <string name="ktv_too_fast">操作太频繁</string>
     <string name="ktv_lrc_failed">歌词加载失败</string>
     <string name="ktv_retry">点击重试</string>
-    <string name="ktv_join_chorus_failed">加入合唱失败</string>
+    <string name="ktv_join_chorus_failed">加入合唱失败, 请3s后重试</string>
 
     <string name="ktv_earback_title">耳返</string>
     <string name="ktv_earback_mode">耳返模式</string>
@@ -201,4 +201,6 @@
     <string name="ktv_debug_settings_set">设置</string>
     <string name="ktv_debug_settings_audio_dump">音频Dump</string>
     <string name="ktv_ear_phone_tip">耳返已关闭，请插入耳机重新开启</string>
+    <string name="ktv_loading_music">%1s歌曲准备中…</string>
+    <string name="ktv_join_chorus_seat_full">没有空麦位，等等再唱吧</string>
 </resources>
