--- a/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Resource/en.lproj/Localizable.strings
@@ -164,7 +164,7 @@
 "home_category_title_all" = "全部玩法";
 "home_category_title_ktv" = "在线K歌房";
 "home_category_title_voiceChat" = "语聊房";
-"home_category_title_live" = "直播";
+"home_category_title_live" = "直播社交";
 "home_content_item_ktv_title_solo" = "独唱&合唱";
 "home_content_item_ktv_desc_solo" = "超低延迟真合唱";
 "home_content_item_ktv_title_snatchsinging" = "抢唱";
