--- a/Android/scenes/pure1v1/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/pure1v1/src/main/res/values-zh/strings.xml
@@ -11,7 +11,7 @@
     <string name="pure1v1_call_receive_accept">立即接受</string>
     <string name="pure1v1_call_receive_reject">拒绝</string>
     <string name="pure1v1_call_dialog_info">本产品仅用于功能体验，单次直播时长不超过20mins</string>
-    <string name="pure1v1_call_waiting_acceptance">等待对方接受…</string>
+    <string name="pure1v1_call_waiting_acceptance">等待对方接受</string>
     <string name="pure1v1_call_connecting">连接中…</string>
     <string name="pure1v1_call_toast_hangup">对方结束连线</string>
     <string name="pure1v1_call_local_rejected">已拒绝</string>
