[Android]optimize code

--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -152,7 +152,7 @@
     <string name="app_about_customer_service">联系客服</string>
     <string name="app_about_official_website">官网地址</string>
     <string name="app_about_phone_cancel">取消</string>
-    <string name="app_mine_current_version">当前版本号：%s</string>
+    <string name="app_mine_current_version">版本号：%s</string>
 
     <string name="app_debug_open">Debug模式已打开</string>
     <string name="app_debug_off">Debug模式已关闭</string>
