--- a/Android/scenes/cantata/src/main/res/values/strings.xml
+++ b/Android/scenes/cantata/src/main/res/values/strings.xml
@@ -177,6 +177,10 @@
     <string name="cantata_earback_tips">开启耳返可实时听到自己的声音，唱歌的时候及时调整</string>
     <string name="cantata_kick_off">您已被踢下麦</string>
     <string name="cantata_dissovle_room_because_no_one_ordered_songs">因长时间未点歌，您的房间已解散，请重新创建房间</string>
+    <string name="cantata_start_cloud_error">云端合流服务开启失败，请重新创建房间</string>
+    <string name="cantata_notice">提示</string>
+    <string name="cantata_ear_back_opensl">切换后将强制使用OpenSL模式，\n确认？</string>
+    <string name="cantata_ear_back_oboe">切换后将强制使用Oboe模式，\n确认？</string>
 
     <string name="cantata_debug_settings">开发者设置</string>
     <string name="cantata_debug_settings_scoring_difficulty">打分难度</string>
