--- a/Android/scenes/ktv/src/main/res/values/strings.xml
+++ b/Android/scenes/ktv/src/main/res/values/strings.xml
@@ -165,7 +165,7 @@
     <string name="ktv_too_fast">操作太频繁</string>
     <string name="ktv_lrc_failed">歌词加载失败</string>
     <string name="ktv_retry">点击重试</string>
-    <string name="ktv_join_chorus_failed">加入合唱失败, 请3s后重试</string>
+    <string name="ktv_join_chorus_failed">加入合唱失败</string>
 
     <string name="ktv_earback_title">耳返</string>
     <string name="ktv_earback_mode">耳返模式</string>
@@ -173,9 +173,15 @@
     <string name="ktv_earback_setting">耳返设置</string>
     <string name="ktv_earback_volume">耳返音量</string>
     <string name="ktv_earback_auto">自动</string>
+    <string name="ktv_earback_oboe">强制Oboe</string>
+    <string name="ktv_earback_opensl">强制OpenSL</string>
+    <string name="ktv_earback_opensl_tips">切换后将强制使用OpenSL模式，\n确认？</string>
+    <string name="ktv_earback_oboe_tips">切换后将强制使用Oboe模式，\n确认？</string>
     <string name="ktv_earback_tips1">开启耳返可实时听到自己的声音，唱歌的时候及时调整</string>
     <string name="ktv_earback_tips2">因为延时和体验问题，在耳返里听到的声音是没有音效的（包括虚拟声卡、场景塑造（KTV、演唱会））</string>
     <string name="ktv_earback_no_micphone">使用耳返必须插入耳机，当前未检测到耳机</string>
+    <string name="ktv_earback_delay">耳返延时</string>
+    <string name="ktv_earback_delay_test">请对着耳麦说话，测试实时耳返延时</string>
     <string name="ktv_virtual_sound_card">虚拟声卡</string>
     <string name="ktv_input_device">麦克风类型</string>
     <string name="ktv_sound_card_mic_type">麦克风类型%d</string>
@@ -206,8 +212,6 @@
     <string name="ktv_highlight_disable">人声突出已失效</string>
     <string name="ktv_highlight_limit">每首歌仅可设置一次人声突出对象，请在下首歌再设置</string>
     <string name="ktv_notice">提示</string>
-    <string name="ktv_ear_back_opensl">切换后将强制使用OpenSL模式，\n确认？</string>
-    <string name="ktv_ear_back_oboe">切换后将强制使用Oboe模式，\n确认？</string>
 
     <string name="ktv_debug">Debug</string>
     <string name="ktv_debug_settings">开发者设置</string>
@@ -216,7 +220,7 @@
     <string name="ktv_debug_settings_private_param">私有参数</string>
     <string name="ktv_debug_settings_set">设置</string>
     <string name="ktv_debug_settings_audio_dump">音频Dump</string>
-    <string name="ktv_ear_phone_tip">耳返已关闭，请插入耳机重新开启</string>
+    <string name="ktv_earphone_close_tip">耳返已关闭，请插入耳机重新开启</string>
     <string name="ktv_loading_music">%1s歌曲准备中…</string>
     <string name="ktv_join_chorus_seat_full">没有空麦位，等等再唱吧</string>
 </resources>
