--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -264,6 +264,7 @@
     <string name="show_beauty_license_senesetime">商汤美颜检测无license</string>
     <string name="show_beauty_license_faceunity">相芯美颜检测无license</string>
     <string name="show_beauty_license_bytedance">火山美颜检测无license</string>
+    <string name="show_beauty_loading">%s美颜资源加载中: %s</string>
     <string name="show_beauty_item_effect_qise">气色</string>
     <string name="show_beauty_item_effect_wanneng">万能</string>
     <string name="show_beauty_item_effect_dousha">豆沙</string>
