--- a/Android/scenes/showTo1v1/src/main/res/values/strings.xml
+++ b/Android/scenes/showTo1v1/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="show_to1v1_come_soon1">Hi，我暂时有事，很快回来…</string>
     <string name="show_to1v1_current_title">本人信息</string>
     <string name="show_to1v1_linking_title">对端信息</string>
+    <string name="show_to1v1_call_toast_remote_busy">对方正忙</string>
 
     <!--    dashboard-->
     <string name="show_to1v1_dashboard_bitrate">码率: %s kbps</string>
