feat: add  'audio dump' config to 1v1 & show to 1v1

--- a/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/zh-Hans.lproj/Localizable.strings
@@ -73,3 +73,7 @@
 
 "show_statistic_other_title" = "其他";
 "show_statistic_roomId" = "频道名";
+
+"audio_dump" = "音频Dump";
+"audio_dump_open" = "开启";
+"audio_dump_close" = "关闭";
