--- a/Android/scenes/pure1v1/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/pure1v1/src/main/res/values-zh/strings.xml
@@ -17,8 +17,15 @@
     <string name="pure1v1_call_local_rejected">已拒绝</string>
     <string name="pure1v1_call_toast_rejected">对方已拒绝</string>
     <string name="pure1v1_call_toast_no_answer">无应答</string>
+    <string name="pure1v1_call_toast_remote_busy">对方正忙</string>
     <string name="pure1v1_call_content_inspect">监测到当前内容存在违规行为</string>
     <string name="pure1v1_dashboard_item">实时数据</string>
+    <string name="pure1v1_dashboard_item_camera">摄像头开</string>
+    <string name="pure1v1_dashboard_item_camera_off">摄像头关</string>
+    <string name="pure1v1_dashboard_item_mic">麦克风开</string>
+    <string name="pure1v1_dashboard_item_mic_off">麦克风关</string>
+    <string name="pure1v1_come_soon">Hi，我暂时有事，很快回来…</string>
+    <string name="pure1v1_come_soon_local">本地摄像头已关闭</string>
     <!--    dashboard-->
     <string name="pure1v1_dashboard_bitrate">码率: %s kbps</string>
     <string name="pure1v1_dashboard_up_bitrate">发送码率: %s kbps</string>
@@ -39,4 +46,6 @@
     <string name="pure1v1_dashboard_down_loss_package">下行丢包率: %s ％</string>
     <string name="pure1v1_dashboard_other">其他</string>
     <string name="pure1v1_dashboard_channel_name">频道名: %s</string>
+    <string name="pure1v1_debug">开发者设置</string>
+    <string name="pure1v1_audio_dump">音频 Dump</string>
 </resources>
