--- a/Android/scenes/show/src/main/res/values/strings.xml
+++ b/Android/scenes/show/src/main/res/values/strings.xml
@@ -111,6 +111,7 @@
     <string name="show_statistic_h265">H265开关：%s</string>
     <string name="show_statistic_pvc">pvc开关：%s</string>
     <string name="show_statistic_low_stream">小流开关：%s</string>
+    <string name="show_local_uid">本端用户ID：%s</string>
     <string name="show_statistic_svc">svc开关：%s</string>
     <string name="show_music_effect_beauty_voice_zhongxin">中性</string>
     <string name="show_music_effect_beauty_voice_wenzhong">稳重</string>
@@ -264,6 +265,8 @@
     <string name="show_beauty_license_senesetime">商汤美颜检测无license</string>
     <string name="show_beauty_license_faceunity">相芯美颜检测无license</string>
     <string name="show_beauty_license_bytedance">火山美颜检测无license</string>
+    <string name="show_beauty_loading">%s美颜资源加载中: %s</string>
+    <string name="show_beauty_loading_failed">美颜资源下载失败，请确认网络正常后退出重进预览页面重启下载</string>
     <string name="show_beauty_item_effect_qise">气色</string>
     <string name="show_beauty_item_effect_wanneng">万能</string>
     <string name="show_beauty_item_effect_dousha">豆沙</string>
