--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -159,6 +159,7 @@
 
     <string name="app_debug_open">Debug模式已打开</string>
     <string name="app_debug_off">Debug模式已关闭</string>
+    <string name="app_debug_env">切换</string>
     <string name="app_exit_debug">确定退出Debug模式么？</string>
     <string name="app_exit_debug_tip">退出debug模式后，设置页面将恢复成正常的设置页面哦～</string>
     <string name="app_agree_tip">请同意我们的隐私政策与用户协议</string>
