--- a/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/en.lproj/Localizable.strings
@@ -41,6 +41,8 @@
 "call_connected_toast_tips"="呼入，已自动接听...";
 "user_list_cell_local_user"="本人信息";
 "user_list_cell_remote_user"="对端信息";
+"call_toast_callfail"="呼叫失败";
+"call_toast_acceptfail"="接受邀请失败";
 
 "report_room" = "举报";
 "report_room_success" = "举报成功";
