--- a/Android/scenes/pure1v1/src/main/res/values/strings.xml
+++ b/Android/scenes/pure1v1/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="pure1v1_dashboard_channel_name">频道名: %s</string>
     <string name="pure1v1_debug">开发者设置</string>
     <string name="pure1v1_audio_dump">音频 Dump</string>
+    <string name="pure1v1_call_failed">呼叫失败：%s</string>
+    <string name="pure1v1_accept_failed">接受邀请失败：%s</string>
 </resources>
