--- a/Android/scenes/showTo1v1/src/main/res/values/strings.xml
+++ b/Android/scenes/showTo1v1/src/main/res/values/strings.xml
@@ -46,6 +46,7 @@
     <string name="show_to1v1_dashboard_down_loss_package">下行丢包率: %s ％</string>
     <string name="show_to1v1_dashboard_other">其他</string>
     <string name="show_to1v1_dashboard_channel_name">频道名: %s</string>
+    <string name="show_to1v1_call_failed">呼叫失败：%s</string>
 
     <string-array name="show_to1v1_room_name">
         <item>小可爱是我呀</item>
