fix: update lcoalized string

--- a/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/ShowTo1v1/ShowTo1v1/Resources/ShowTo1v1.bundle/zh-Hans.lproj/Localizable.strings
@@ -61,8 +61,8 @@
 "show_advance_setting_FPS_title" = "编码帧率";
 "show_statistic_loss_package" = "丢包率";
 "show_statistic_down_net_speech" = "下行网络";
-"call_toast_callfail"="呼叫失败";
-"call_toast_acceptfail"="接受邀请失败";
+"call_toast_callfail"="网络不佳，操作失败";
+"call_toast_acceptfail"="网络不佳，操作失败";
 
 "show_create_room_name1"="小可爱是我呀";
 "show_create_room_name2"="我是你的小可爱";
