--- a/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/en.lproj/Localizable.strings
@@ -27,8 +27,8 @@
 "call_usage_tips"=" 本产品仅用于功能体验，单次直播时长不超过20mins";
 "call_toast_hangup"="对方结束连线";
 "call_toast_reject"="对方已拒绝";
-"call_toast_callfail"="呼叫失败";
-"call_toast_acceptfail"="接受邀请失败";
+"call_toast_callfail"="网络不佳，操作失败";
+"call_toast_acceptfail"="网络不佳，操作失败";
 
 "report_room" = "举报";
 "report_room_success" = "举报成功";
