--- a/Android/scenes/showTo1v1/src/main/res/values/strings.xml
+++ b/Android/scenes/showTo1v1/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="show_to1v1_random">随机</string>
     <string name="show_to1v1_room_name_hint">填写房间名称，吸引更多观众</string>
     <string name="show_to1v1_room_name_empty_tips">请输入房间名</string>
-    <string name="show_to1v1_room_list_refreshed">网络不佳，直播间列表获取失败，建议重试，错误：%s</string>
+    <string name="show_to1v1_room_list_refreshed">网络不佳，直播间列表刷新失败，建议重试，错误：%s</string>
     <string name="show_to1v1_create_room_tips">本产品仅用于功能体验，单次直播时长不超过20mins</string>
     <string name="show_to1v1_create">创建</string>
     <string name="show_to1v1_creating">创建中…</string>
