Dev/show 4.2.1 hot update (#946)
* feat: add hot update beauty test

* fix: hot update fu lic/resource & optimize resource manager invoke

* fix: resource path fixed

* feat: upgrade callapi to 2.0.0

* fix: upgrade resource manager

* feat: add rtm syncmanager & refactor pure 1v1 service

* feat: add rtm syncmanager to 'show to 1v1'

* feat: add AudioScenarioApi

* fix: optimize and add log

* fix: rtm lost fixed

* fix: add log & fix rtm lost

* fix: rtm lost fixed

* fix: rtm lost fixed

* fix: upgrade resource manager

* fix: upgrade callapi & fix uid encode bugs name in ShowTo1v1UserInfo

* fix: write resource manager log

* fix audio aip (#912)

* fix: senseme sticker & style resource path fixed

* fix: byte effect sticker path

* fix: add download progress view

* fix: download beauty resource fixed

* fix: retain cycle fixed

* fix: remove unuse file

* fix: add unzip progress to startDownloadZip

* fix: syncmanager enter fail handler

* fix: rtm syncmanager minor fixed

* fix:  unzip cancelable

* fix: resource manager & syncmanger log

* fix: update log

* feat: add 1v1 video config scenarios

* refactor: refactor callapi

* Show 4.2.1 hot update fp (#914)

* fix audio aip

* fix logger

* fix: upgrade rtc sdk to 4.1.1.27 & fix resource logger

* fix: upgrade callapi

* fix: upgrade callapi

* fix: main thread checker

* feat: adapt to  videoloader API

* Show 4.2.1 hot update fp (#915)

* fix audio aip

* fix logger

* fix bug

* feat: add  'audio dump' config to 1v1 & show to 1v1

* test: add cost time log

* fix:  destroy room in 'show to 1v1' fixed

* fix: upgrade syncmanager

* fix: add dynamic resource url to keycenter

* Show 4.2.1 hot update fp (#917)

* fix audio aip

* fix logger

* fix bug

* fix logger

* fix show logger

* fix: ui bugs fixed

* fix: update  encoder(720 x 1280 & 24fps )to 'show to 1v1'

* fix: add delegate timing fixe

--- a/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/en.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Pure1v1/Pure1v1/Resources/Pure1v1.bundle/en.lproj/Localizable.strings
@@ -26,9 +26,13 @@
 "call_title_reject"="拒绝";
 "call_usage_tips"=" 本产品仅用于功能体验，单次直播时长不超过20mins";
 "call_toast_hangup"="对方结束连线";
+"call_toast_remote_fail"="对方已离开, 连线自动结束";
 "call_toast_reject"="对方已拒绝";
+"call_toast_busy"="呼叫失败, 对方正忙";
+"call_toast_callfail"="网络不佳, 呼叫失败, 错误码：";
+"call_toast_acceptfail"="网络不佳，接受邀请失败，错误码：";
 
-"call_toast_disconnect"="连接中断，重连中...";
+"user_list_get_fail"="网络不佳, 用户列表刷新失败, 建议重试, 错误:";
 
 "report_room" = "举报";
 "report_room_success" = "举报成功";
