--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -151,7 +151,7 @@
     <string name="app_about_cantata">大合唱</string>
     <string name="app_about_pure1v1">1v1私密房</string>
     <string name="app_about_showTo1v1">秀场转1v1私密房</string>
-    <string name="app_about_joy">声动互娱-小玩法</string>
+    <string name="app_about_joy">小玩法</string>
     <string name="app_about_customer_service">联系客服</string>
     <string name="app_about_official_website">官网地址</string>
     <string name="app_about_phone_cancel">取消</string>
