--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">声动互娱</string>
+    <string name="app_name">声动互娱-语聊房</string>
 
     <string name="app_agreement_page_title">个人信息保护指引</string>
     <string name="app_agreement_protection_tip1">声动互娱软件是一款用于向声网客户展示产品使用效果的测试产品，仅用于测试产品的功能、性能和可用性，而非提供给大众使用的正式产品。</string>
@@ -176,6 +176,7 @@
     <string name="app_vcode_send_failed_tip">验证码发送失败</string>
     <string name="app_edit_success">修改成功</string>
     <string name="app_upload_illegal_content_error">请勿上传非法内容</string>
+    <string name="app_demo_test">本Demo仅限客户项目测试</string>
 
 
 </resources>
