--- a/iOS/AgoraEntScenarios/Scenes/KTV/KtvResource.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/KTV/KtvResource.bundle/zh-Hans.lproj/Localizable.strings
@@ -159,7 +159,6 @@
 "ktv_join_chorus_failed" = "加入合唱失败";
 "ktv_enable_electronic" = "启用电音";
 "ktv_chooseSong_failed" = "点歌失败，请重试";
-"ktv_choose_fail" = "太火爆了，等会再试试";
 "ktv_audio_onmic" = "音频上麦";
 "ktv_video_onmic" = "视频上麦";
 "ktv_room_concert" = "演唱会";
@@ -295,3 +294,14 @@
 "ktv_skip_pre" = "跳过前奏";
 "ktv_skip_end" = "跳过尾奏";
 "ktv_per_bro" = "专业主播";
+
+"ktv_create_room_fail_toast"="创建房间失败, 错误:";
+"ktv_join_room_fail_toast"="加入房间失败, 错误:";
+"ktv_enter_seat_fail_toast"="上麦失败, 错误:";
+"ktv_leave_seat_fail_toast"="下麦失败, 错误:";
+"ktv_kick_seat_fail_toast"="踢人下麦失败, 错误:";
+"ktv_get_song_list_fail_toast"="拉取歌单失败, 错误:";
+"ktv_choose_song_fail_toast"="点歌失败, 错误:";
+"ktv_remove_song_fail_toast"="删除歌曲失败, 错误:";
+"ktv_pin_song_fail_toast"="置顶歌曲失败, 错误:";
+"ktv_switch_song_fail_toast"="切歌失败, 错误:";
