[Android][Show]1.perfect sync extension service log;2.fix pk accept bug;3.adjust the word of edge case;and etc.

--- a/Android/scenes/show/src/main/res/values-zh/strings.xml
+++ b/Android/scenes/show/src/main/res/values-zh/strings.xml
@@ -280,6 +280,12 @@
     <string name="show_beauty_item_beauty_fajixian">发际线</string>
     <string name="show_beauty_item_beauty_white_teeth">白牙</string>
     <string name="show_beauty_item_sticker_zhaocaimao">招财猫</string>
+    <string name="show_create_micseat_apply_error">网络异常, 申请上麦失败, 错误: %s</string>
+    <string name="show_accept_micseat_apply_error">网络异常, 同意上麦失败, 错误: %s</string>
+    <string name="show_create_micseat_invitation_error">网络异常, 邀请连麦失败, 错误: %s</string>
+    <string name="show_accept_micseat_invitation_error">网络异常, 接受连麦邀请失败, 错误: %s</string>
+    <string name="show_create_pk_invitation_error">网络异常, 邀请PK失败, 错误: %s</string>
+    <string name="show_accept_pk_invitation_error">网络异常, 接受PK邀请失败, 错误: %s</string>
 
     <string-array name="show_encoder">
         <item>硬编码</item>
