--- a/iOS/AgoraEntScenarios/Scenes/Joy/Joy/Resources/Joy.bundle/zh-Hans.lproj/Localizable.strings
+++ b/iOS/AgoraEntScenarios/Scenes/Joy/Joy/Resources/Joy.bundle/zh-Hans.lproj/Localizable.strings
@@ -13,7 +13,7 @@
 "authorized_ok"="确定";
 "authorized_cancel"="取消";
 
-"user_list_title"="弹幕玩法";
+"user_list_title"="互动玩法";
 "room_list_refresh_tips"="房间列表已刷新";
 "room_list_empty_desc"="欢迎来到声网弹幕玩法方案\n目前暂无房间";
 "call_state_connecting"="连接中";
